# kyaro-anti-ddos

./: LICENSE  README.md  config.json  install.bat  install.sh  start.bat  start.sh  stop.bat  stop.sh
dashboard/: README.md  index.html  package-lock.json  package.json
dashboard/src/: App.tsx  index.css
dashboard/src/components/: ArrayInput.tsx
dashboard/src/components/dashboard/: Dashboard.tsx  LayerControls.tsx  MLSettings.tsx  ThreatAnalytics.tsx  TrafficMonitor.tsx
dashboard/src/components/desktop/: Desktop.tsx  DesktopIcon.tsx  KyaroBadge.tsx  KyaroLogo.tsx  NotificationToast.tsx  StartMenu.tsx  Taskbar.tsx  Window.tsx
dashboard/src/lib/: api.ts  config-mapper.ts  utils.ts
dashboard/src/pages/: Analytics.tsx  Configuration.tsx  Dashboard.tsx  Index.tsx  Threats.tsx
kyaro_antiddos/: Cargo.toml  README.md  config.example.json
kyaro_antiddos/src/: main.rs
kyaro_antiddos/src/backend/: api.rs  defense.rs  layer3.rs  layer4.rs  layer7.rs  main.rs  ml_integration.rs
kyaro_antiddos/src/common/: types.rs
kyaro_antiddos/src/ml/: advanced_dl_model.py  deep_learning.py  ml_engine.py  realtime_detection_demo.py  requirements.txt  test_advanced_model.py  train_advanced_model.py
