[package]
name = "kyaro_antiddos"
version = "0.1.0"
edition = "2021"
authors = ["Kyaro"]
description = "Comprehensive Anti-DDoS tool"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
pnet = "0.34"
maxminddb = "0.23"
ipnet = "2.9"
socket2 = "0.5"
netfilter = "0.6"
clap = { version = "4.4", features = ["derive"] }
dashmap = "5.5"
chrono = "0.4"
once_cell = "1.19"
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
rayon = "1.8"
regex = "1.10"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
thiserror = "1.0"
rustls = "0.21"
webpki = "0.22"
hyper = { version = "1.1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio"] }
pyo3 = { version = "0.20", features = ["auto-initialize"] }

[dependencies.windows]
version = "0.52"
features = [
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_Networking_WinSock",
    "Win32_System_Threading",
    "Win32_Foundation"
]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[[bin]]
name = "kyaro_antiddos"
path = "src/backend/main.rs"
